--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Practica 2 de GIT</h1>
+    <h1>Cambio desde Github</h1>
     <h2>Hola mundo</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique dolorem consequuntur reiciendis facilis veniam doloribus optio quam unde dolor, dolorum eaque illum saepe esse soluta numquam delectus. Non, et sed.</p>
 </body>
