--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <h1>Cambio desde Github</h1>
     <h2>Hola mundo :3</h2>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique dolorem consequuntur reiciendis facilis veniam doloribus optio quam unde dolor, dolorum eaque illum saepe esse soluta numquam delectus. Non, et sed.</p>
+    
+    <ul>
+        <li>Home</li>
+        <li>Settings</li>
+        <li>About us</li>
+        <li>Log out</li>
+    </ul>
 </body>
 </html>
