Creación del div en el index y estilos en css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practica 2 de GIT</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Practica 2 de GITLAB</h1>
@@ -18,5 +19,9 @@
         <li>About us</li>
         <li>Log out</li>
     </ul>
+
+    <div class="cajita">
+        Ramiro Martínez
+    </div>
 </body>
 </html>
