Creación del div en el index y estilos en css2

--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
     <div class="cajita">
         Ramiro Martínez
     </div>
+    <div class="cajita">
+        Jasiel Martinez
+    </div>
 </body>
 </html>
